Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5021

COMPUTE STATS hang while RowsRead of one SCAN fragment winds down

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.9.0
    • Backend

    Description

      I created a table copied from another table, but sorted, partially using Impala and partially using Hive. I invalidated the table metadata. When I run COMPUTE STATS on the table the SELECT COUNT query runs for awhile and then stops making progress. After that point, comparing snapshots of the profile reveals that only one SCAN fragment seems to be active, but its RowsRead counter is moving backwards, and even goes negative. When I kill the query and try again, the problem reproduces, hanging at the same point in the scan progress.

      Attachments

        Activity

          People

            alex.behm Alexander Behm
            mmulder Matthew Mulder
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: